--- a/pag005.html
+++ b/pag005.html
@@ -45,7 +45,7 @@
 
 </head>
 <body>
-    <a href="pag001.html">VOLTAR PAGINA INICIAL</a>
+    <a href="index.html">VOLTAR PAGINA INICIAL</a>
     <br>
     <h1>POUSADA CANTO DO SOL</h1>
     <p>
