--- a/pag002.html
+++ b/pag002.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+        body{
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
     
     <a href="index.html">VOLTAR PAGINA INICIAL</a>
     <br>
     <br>
-    <img src="imagens/pagina em construção.htm" alt="">
+    <img src="imagens/Página-em-construção.png" alt="">
 </body>
 
 </html>
