atualização logo instagram

--- a/pag005.html
+++ b/pag005.html
@@ -41,6 +41,12 @@
     background-color: var(--cor3);
     color: rgb(29, 6, 243);
         }
+        nav{
+            text-align: center;
+        }
+        img{
+            padding: 4px;
+        }
     </style>
 
 </head>
@@ -163,9 +169,12 @@ Faça sua reserva:
     <img src="imagens/17.jpg" alt=""> 
     <img src="imagens/15.jpg" alt="">
     <img src="imagens/16.jpg" alt=""> 
-    <img src="imagens/instagram.jpeg" alt="">
-
+    
+<nav>
+    <img src="imagens/logo instagram.jpeg" alt="">
     <a href="https://www.instagram.com/cantodosolpousada?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">Pousada Canto do Sol</a>
+</nav>
+    
 
 
 
