--- a/pag004.html
+++ b/pag004.html
@@ -16,7 +16,58 @@
     <a href="index.html">VOLTAR PAGINA INICIAL</a>
     <br>
     <br>
-    <img src="imagens/Página-em-construção.png" alt="">
+    <h1>
+        Programação:
+    </h1>
+    <br>
+    <br>
+    <h2>Dia 30/01/2025 - QUINTA-FEIRA</h2>
+    <br>
+    <li>19:30hs: Entrega dos kits (Pousada Canto Sol )</li>
+    <li>22:30hs: Baile de abertura - Tema Livre</li>
+    <li>05:00hs: Encerramento do Baile</li>
+    <br>
+    <br>
+    <h2>Dia 31/01/2025 - SEXTA-FEIRA</h2>
+    <li>23:30hs: Baile Pink and Blue (cores do congresso)</li>
+    <li>05:00hs: Encerramento do Baile</li>
+    <br>
+    <h3>Aula de Danças</h3>
+   <li>14:00</li>
+   <li>15:00</li>
+   <li>16:00</li>
+   <li>17:00 - Break</li>
+   <li>17:30</li>
+   <li>18:30</li>
+   <li>19:30</li>
+   <li>20:30</li> 
+    <br>
+    <br>
+    <h2>Dia 01/02/2025 - SÁBADO</h2>
+   <li>22:00hs: Noite de Shows na praça central da cidade</li>
+   <li>24:00hs: Baile Tropical</li>
+   <li>05:00hs: Encerramento</li>
+   <br>
+   <h3>Aula de Danças</h3>
+   <li>14:00</li>
+   <li>15:00</li>
+   <li>16:00</li>
+   <li>17:00 - Break</li>
+   <li>17:30</li>
+   <li>18:30</li>
+   <li>19:30</li>
+   <li>20:30</li> 
+    <br>
+    <br>
+    <h2>Dia 02/02/2025 - DOMINGO</h2>
+    <li>Festa no Barco Diamante</li>
+    <li>Saída do barco às 10:30hs</li>
+    <li>Retorno às 16:00hs</li>
+    <li>2 ilhas + Parada para almoço</li>
+    <br>
+    <li>22:00hs: Baile de Encerramento Noite do Branco</li>
+    <li>05:00hs: Encerramento</li>
+    
 </body>
 
 </html>
