--- a/pag004.html
+++ b/pag004.html
@@ -7,8 +7,36 @@
 
     <style>
         body{
-            text-align: center;
+            
+            margin: 2px;
+            font-family: Arial, Helvetica, sans-serif;
+            background-color: rgb(243, 226, 151);
+            background-image: linear-gradient(to top, rgb(238, 203, 49),rgb(245, 86, 46));
         }
+        h1{
+            text-align: center;
+            color: white;
+        }
+        h2{
+            text-align: center;
+            color: rgb(245, 86, 46);
+        }
+        h3{
+            color: rgb(238, 203, 49);
+        }
+        nav{
+            margin-left: 300px;
+            margin-right: 300px;
+            padding: 10px;
+            background-color: white;
+        }
+        a{
+            color: white;
+        }
+        a:hover{
+            color: blue;
+        }
+
     </style>
 </head>
 <body>
@@ -21,6 +49,7 @@
     </h1>
     <br>
     <br>
+    <nav>
     <h2>Dia 30/01/2025 - QUINTA-FEIRA</h2>
     <br>
     <li>19:30hs: Entrega dos kits (Pousada Canto Sol )</li>
@@ -67,7 +96,12 @@
     <br>
     <li>22:00hs: Baile de Encerramento Noite do Branco</li>
     <li>05:00hs: Encerramento</li>
-    
+    </nav>
+    <br>
+    <br>
+    <br>
+    <br>
+
 </body>
 
 </html>
