--- a/index.html
+++ b/index.html
@@ -14,30 +14,34 @@
 <img src="imagens/maraú02.png" alt="logo">
 </div>
 <nav>
-<a href="pag002.html">O EVENTO</a>
-<a href="pag003.html">PACOTES</a>
+<!--<a href="pag002.html">PACOTES</a>
 <a href="pag004.html">PROGRAMAÇÃO</a>
 <a href="pag005.html">HOSPEDAGEM</a>
-<a href="pag006.html">COMO CHEGAR</a>
+<a href="pag006.html">COMO CHEGAR</a> -->
 </nav>    
 <h1>O início de uma nova era...30/01/2025 á 02/02/2025</h1>
-<h3>Muito sol, muito Zouk e Lambada em um Paraiso Tropical !!!! <br>
-Venha para o MARAÚ DANCE FESTIVAL  </h3>
+<h2>Muito sol, muita Lambada e Zouk Brasileiro em um Paraiso Tropical !!!!
+    Venha para o MARAÚ DANCE FESTIVAL  </h3>
 <br>
 <br>
-<h2>
-    PROFESSORES
-</h2>
-<nav>
-<img src="imagens/felipe.jpeg" alt="Felipe Lira">
-<img src="imagens/patricia.jpeg" alt="Patricia Lira">
-<img src="imagens/rodrigo.jpeg" alt="Familia Lira">
-</nav>
-<h2>
-    DJ`s
-</h2>
-<img src="imagens/djEdu.png" alt="Dj Edu">
+<h3>
+   <li>4 noites de baile com festas temáticas.</li>
+   <br>
+   <li>Experiência única em ilhas paradisíacas com muita dança em nossa BOAT PARTY !!!</li>
+   <br>
+   <li>2 dias de aulas para todos os níveis, incluindo uma sala exclusiva para iniciantes.</li> 
+   <br> 
+   <li>Shows dos professores e convidados.</li>
+   <br>
+   <li>Contaremos com Professores e DJs de destaque internacional no cenário da Lambada e Zouk Brasileiro.</li> 
+</h3>
 <br>
 <br>
+<img src="imagens/flyer/unnamed.jpg" alt="">
+<br>
+<br>
+
+
+
 </body>
 </html>
