--- a/index.html
+++ b/index.html
@@ -37,10 +37,21 @@
 </h3>
 <br>
 <br>
-<img src="imagens/flyer/unnamed.jpg" alt="">
+
 <br>
 <br>
 
+<h4>Patrocinador Oficial</h4>
+<img src="imagens/CANTO DO SOL PRAIA 1_page-0001.jpg" alt="Canto do Sol Praia Logo">
+<br>
+<h4>Apoio</h4> 
+<img src="imagens/apoio/organização internaciaonal de lambada.jpg" alt="">
+<img src="imagens/apoio/Logo indyo normal fundo.jpg" alt="">
+<img src="imagens/apoio/zouk army.png" alt="">
+<img src="imagens/apoio/chinelo e areia_page-0001.jpg" alt=""> 
+<img src="imagens/apoio/logo camamu adventure_page-0001.jpg" alt="">
+<img src="imagens/apoio/secretaria do turismo.jpg" alt="">
+<img src="imagens/apoio/zouk for fa.png" alt="">
 
 
 </body>
