--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 <img src="imagens/apoio/logo camamu adventure_page-0001.jpg" alt="">
 <img src="imagens/apoio/secretaria do turismo.jpg" alt="">
 <img src="imagens/apoio/zouk for fa.png" alt="">
+<img src="imagens/apoio/LOGO EMBRAZOUK - FUNDO TRANSPARENTE.png" alt="">
 
 
 </body>
