--- a/index.html
+++ b/index.html
@@ -24,17 +24,9 @@
     Venha para o MARAÚ DANCE FESTIVAL  </h3>
 <br>
 <br>
-<h3>
-   <li>4 noites de baile com festas temáticas.</li>
-   <br>
-   <li>Experiência única em ilhas paradisíacas com muita dança em nossa BOAT PARTY !!!</li>
-   <br>
-   <li>2 dias de aulas para todos os níveis, incluindo uma sala exclusiva para iniciantes.</li> 
-   <br> 
-   <li>Shows dos professores e convidados.</li>
-   <br>
-   <li>Contaremos com Professores e DJs de destaque internacional no cenário da Lambada e Zouk Brasileiro.</li> 
-</h3>
+<video controls>
+    <source src="video/marau_Q9O5OsKV.mp4" type="video/mp4">
+</video>
 <br>
 <br>
 
