--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
 <img src="imagens/maraú02.png" alt="logo">
 </div>
 <nav>
-<!--<a href="pag002.html">PACOTES</a>
+<a href="pag002.html">PACOTES</a>
+<a href="pag003.html">PROFESSORES</a>
 <a href="pag004.html">PROGRAMAÇÃO</a>
 <a href="pag005.html">HOSPEDAGEM</a>
-<a href="pag006.html">COMO CHEGAR</a> -->
+<a href="pag006.html">COMO CHEGAR</a>
 </nav>    
 <h1>O início de uma nova era...30/01/2025 á 02/02/2025</h1>
 <h2>Muito sol, muita Lambada e Zouk Brasileiro em um Paraiso Tropical !!!!
