--- a/pag004.html
+++ b/pag004.html
@@ -48,11 +48,16 @@
             padding: 10px;
             
         }
-        a{
+        a{                    /*link do menu*/
             color: white;
+            padding: 10px; /*dist. dos links*/
+            border-radius: 5px; /*arred. da borda*/
+            text-decoration: none; /*tirar sublinhado*/ 
+            font-weight: bolder; /*negrito*/
         }
         a:hover{
-            color: blue;
+            background-color: var(--cor3);
+            color: rgb(136, 208, 250);
         }
         footer{
             color: black;
@@ -140,7 +145,5 @@
     <br>
 
 </body>
-<footer>
-    criado por Newton Pohsner
-</footer>
+>
 </html>
