atualização de abas

--- a/pag004.html
+++ b/pag004.html
@@ -69,7 +69,13 @@
     <div>
         <img src="imagens/maraú02.png" alt="logo">
         </div>
-    <a href="index.html">VOLTAR PAGINA INICIAL</a>
+        <nav>
+            <a href="index.html">PAGINA INICIAL</a>
+            <a href="pag003.html">PROFESSORES</a>    
+            <a href="pag002.html">PACOTES</a>
+            <a href="pag005.html">HOSPEDAGEM</a>
+            <a href="pag006.html">COMO CHEGAR</a>
+            </nav>
     <br>
     <br>
     <h1>
