--- a/pag004.html
+++ b/pag004.html
@@ -16,7 +16,7 @@
             margin: 2px;
             font-family: Arial, Helvetica, sans-serif;
             background-color: rgb(243, 226, 151);
-            background-image: url(imagens/professores/imagem\ fundo.JPG);
+            background-image: url(imagens/professores/imagem\ fundo\ programação.JPG);
             text-align: center;
             color: white;
         }
