--- a/pag002.html
+++ b/pag002.html
@@ -6,17 +6,105 @@
     <title>Document</title>
 
     <style>
+
+        main{
+           min-width: 320;
+            max-width: 900; 
+        }
         body{
-            text-align: center;
+            text-align: center; 
+            border-color: rgb(243, 226, 151);
+            padding: 0px;
+            font-family: Arial, Helvetica, sans-serif;
+            background-color: rgb(243, 226, 151);
+            margin: auto;
+            background-image: url(imagens/professores/imagem\ fundo\ pacotes.png);
+            background-repeat: no-repeat ;
+            background-size: cover;
+        }
+        h1{
+            color: orangered;
+            background-color: white;
+        }
+        div {
+           text-align: center; 
+           background-color: rgb(243, 226, 151);
+           background-image: linear-gradient(to top, rgb(238, 203, 49),rgb(245, 86, 46));
+        }
+        
+        .logo > img{
+            width: 100%;
+            background-size: cover;
+        }
+        nav > a{                    /*link do menu*/
+            color: white;
+            background-color: rgb(216, 31, 154);
+            padding: 10px; /*dist. dos links*/
+            border-radius: 5px; /*arred. da borda*/
+            text-decoration: none; /*tirar sublinhado*/ 
+            font-weight: bolder; /*negrito*/
+        }
+
+        nav > a:hover {             /*quando passa o mouse em cima*/
+            background-color: var(--cor3);
+            color: rgb(136, 208, 250);
+        }
+        input{
+            color: blue;
+            width: 190px;
+            height: 60px;
         }
     </style>
 </head>
 <body>
-    
-    <a href="index.html">VOLTAR PAGINA INICIAL</a>
+    <div class="logo">
+        <img src="imagens/maraú02.png" alt="logo">
+        </div>
+        <nav>
+            <a href="index.html">PAGINA INICIAL</a>
+            <a href="pag003.html">PROFESSORES</a>    
+            <a href="pag002.html">PROGRAMAÇÃO</a>
+            <a href="pag005.html">HOSPEDAGEM</a>
+            <a href="pag006.html">COMO CHEGAR</a>
+            </nav>
     <br>
     <br>
-    <img src="imagens/Página-em-construção.png" alt="">
+    <h1>PACOTES MARAU DANCE FESTIVAL 2025</h1>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
+<h2>Earley Birdy R$530,00</h2>
+<h3>Full Pass - Lote 1: R$560,00</h3>
+<h3>02 Dias de workshop + 4 Bailes - 30 de Janeiro a 02 de Fevereiro</h3>
+<h2>***Não incluso o Boat Party***</h2>
+<h3>Disponível até 31 de Maio de 2024</h3>
+<br>
+<a href="link do site" target="_blank">
+    <input type="button" value="COMPRE AGORA/ BY NOW">
+</a>
+<br>
+<br>
+<br>
+<br>
+<br>
+<div class="apoio">
+<h4>Patrocinador Oficial</h4>
+<img src="imagens/CANTO DO SOL PRAIA 1_page-0001.jpg" alt="Canto do Sol Praia Logo">
+<br>
+<h4>Apoio</h4> 
+<img src="imagens/apoio/organização internaciaonal de lambada.jpg" alt="">
+<img src="imagens/apoio/Logo indyo normal fundo.jpg" alt="">
+<img src="imagens/apoio/zouk army.png" alt="">
+<img src="imagens/apoio/chinelo e areia_page-0001.jpg" alt=""> 
+<img src="imagens/apoio/logo camamu adventure_page-0001.jpg" alt="">
+<img src="imagens/apoio/secretaria do turismo.jpg" alt="">
+<img src="imagens/apoio/zouk for fa.png" alt="">
+<img src="imagens/apoio/LOGO EMBRAZOUK - FUNDO TRANSPARENTE.png" alt="">
+</div>
+
 </body>
 
 </html>
