--- a/pag004.html
+++ b/pag004.html
@@ -27,6 +27,7 @@
         }
         div > img{
             width: 100%;
+            background-size: cover;
         }
         h1{
             text-align: center;
@@ -50,6 +51,7 @@
         }
         a{                    /*link do menu*/
             color: white;
+            background-color: rgb(216, 31, 154);
             padding: 10px; /*dist. dos links*/
             border-radius: 5px; /*arred. da borda*/
             text-decoration: none; /*tirar sublinhado*/ 
