--- a/pag003.html
+++ b/pag003.html
@@ -29,6 +29,7 @@
         
         a{                    /*link do menu*/
             color: white;
+            background-color: rgb(216, 31, 154);
             padding: 10px; /*dist. dos links*/
             border-radius: 5px; /*arred. da borda*/
             text-decoration: none; /*tirar sublinhado*/ 
