--- a/pag002.html
+++ b/pag002.html
@@ -23,8 +23,14 @@
             background-size: cover;
         }
         h1{
-            color: orangered;
+            color: rgb(245, 86, 46);
             background-color: white;
+        }
+        h2{
+           color: yellow; 
+        }
+        h3{
+            color: yellow;
         }
         div {
            text-align: center; 
@@ -50,8 +56,10 @@
             color: rgb(136, 208, 250);
         }
         input{
-            color: blue;
-            width: 190px;
+            color: white;
+            background-color: rgb(245, 86, 46);
+            font-size: medium;
+            width: 220px;
             height: 60px;
         }
     </style>
