--- a/pag005.html
+++ b/pag005.html
@@ -257,7 +257,7 @@
         <br>
         Faça sua reserva:
         <br>
-        <a href="https://wa.me/colocar o numero">CLIQUE AQUI</a>
+        <a href="https://wa.me/73999995044">CLIQUE AQUI</a>
         <br>
         <br>
         <br>
