--- a/pag002.html
+++ b/pag002.html
@@ -84,11 +84,15 @@
     <br>
     <br>
 
-<h2>Earley Birdy R$530,00</h2>
-<h3>Full Pass - Lote 1: R$560,00</h3>
-<h3>02 Dias de workshop + 4 Bailes - 30 de Janeiro a 02 de Fevereiro</h3>
+<h2>Full Pass - Earlybirdy R$ 530,00</h2>
+<h3>02 Dias de workshop + 4 Bailes -</h3>
 <h2>***Não incluso o Boat Party***</h2>
-<h3>Disponível até 31 de Maio de 2024</h3>
+<br>
+<br>
+<h2>Full Pass + Boat Party - Earlybirdy R$ 690,00</h2>
+<br>
+<br>
+<h3>Disponível até 14 de Março de 2024</h3>
 <br>
 <a href="link do site" target="_blank">
     <input type="button" value="COMPRE AGORA/ BY NOW">
