--- a/pag003.html
+++ b/pag003.html
@@ -91,7 +91,7 @@
     <br>
     <br>
     <div>
-        <a href="https://www.instagram.com/pohsnerpatricia/">
+        <a href="https://www.instagram.com/pohsnerpatricia/" target="_blank">
             <img src="imagens/professores/Patricia Lira 2.jpg" alt="">
         </a>
         <h3>Patricia Lira</h3>
@@ -99,7 +99,7 @@
     </div>
     
     <div>    
-        <a href="https://www.instagram.com/fefollyra/">
+        <a href="https://www.instagram.com/fefollyra/" target="_blank">
         <img src="imagens/professores/felipe lira.png" alt="">
         </a>
         <h3>Felipe Lira</h3>
@@ -107,7 +107,7 @@
     </div>
     
     <div>    
-        <a href="https://www.instagram.com/p/Bm6G68BBJGX/">
+        <a href="https://www.instagram.com/p/Bm6G68BBJGX/" target="_blank">
         <img src="imagens/professores/rodrigo lira.png" alt="">
         </a>
         <h3>Rodrigo Lira</h3>
@@ -115,41 +115,53 @@
     </div>
     <br>
     <div>
-        <a href="#">
+        <a href="https://www.instagram.com/patriciazumbaenergia/ " target="_blank">
             <img src="imagens/professores/Didi e Patricia.jpg" alt="">
         </a>
         <h3>Didi & Patricia</h3>
         <p>Porto Seguro/BA - Brasil</p>
     </div>
     <div>
-        <a href="#">
+        <a href="https://www.instagram.com/irlacarina/" target="_blank">
+            <img src="imagens/professores/Irla Carina.jpg" alt="">
+        </a>
+        <h3>Irla Carina</h3>
+        <p>Rio de Janeiro/RJ - Brasil</p>
+    </div>
+    <div>
+        <a href="https://www.instagram.com/raueisa/" target="_blank">
             <img src="imagens/professores/Ruan e Isamara.jpg" alt="">
         </a>
-        <h3>Ruan & Isamara</h3>
+        <h3>Raú & Isamara</h3>
         <p>São Paulo/SP - Brasil</p>
     </div>
     <br>
     <div>
-        <a href="#">
+        <a href="https://www.instagram.com/valvanessa/" target="_blank">
             <img src="imagens/professores/Val e Vanessa.jpg" alt="">
         </a>
         <h3>Val & Vanessa</h3>
         <p>Rio de Janeiro/RJ - Brasil</p>
     </div>
     <div>
-        <a href="#">
-            <img src="imagens/professores/Irla Carina.jpg" alt="">
-        </a>
-        <h3>Irla Carina</h3>
-        <p>Rio de Janeiro/RJ - Brasil</p>
-    </div>
-    <br>
-    <div>
-        <a href="#">
+        <a href="https://www.instagram.com/joviniiel/" target="_blank">
             <img src="imagens/professores/Jo e Viniiel.jpg" alt="">
         </a>
         <h3>Jô & Viniiel</h3>
         <p>Feira de Santana/BA - Brasil</p>
+    </div>
+    <div>
+            <img src="imagens/professores/interrogação.png" alt="">
+        </a>
+        <h3>Quem será???</h3>
+        <p>???????/?? - ?????</p>
+    </div>
+    <br>
+    <div>
+        <img src="imagens/professores/interrogação.png" alt="">
+    </a>
+    <h3>Quem será???</h3>
+    <p>???????/?? - ?????</p>
     </div>
     <br>
     <br>
@@ -177,9 +189,18 @@
         <h3>DJ Raffro</h3>
         <p>Brasilia/DF - Brasil</p>
     </div>
-
     <br>
     <br>
+    <h1>MÍDIA</h1>
+    <br>
+    <br>
+    <div>
+        <a href="https://www.instagram.com/indyo.films/">
+            <img src="imagens/professores/indio.jpg" alt="">
+        </a>
+        <h3>Indio</h3>
+        <p>Brasilia/DF - Brasil</p>
+    </div>
     <br>
     <br>
     <br>
