--- a/pag003.html
+++ b/pag003.html
@@ -198,7 +198,7 @@
         <a href="https://www.instagram.com/indyo.films/">
             <img src="imagens/professores/indio.jpg" alt="">
         </a>
-        <h3>Indio</h3>
+        <h3>Indyo</h3>
         <p>Brasilia/DF - Brasil</p>
     </div>
     <br>
