--- a/pag004.html
+++ b/pag004.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
+    <!--
     <style>
         main{
              min-width: 320;
@@ -150,7 +150,19 @@
     <img src="imagens/apoio/zouk for fa.png" alt="">
     <img src="imagens/apoio/LOGO EMBRAZOUK - FUNDO TRANSPARENTE.png" alt="">
     <br>
+    <br>-->
+    <style>
+        body{
+            text-align: center;
+        }
+    </style>
+</head>
+<body>
+    
+    <a href="index.html">VOLTAR PAGINA INICIAL</a>
     <br>
+    <br>
+    <img src="imagens/Página-em-construção.png" alt="">
 
 </body>
 >
