--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <img src="imagens/apoio/secretaria do turismo.jpg" alt="">
 <img src="imagens/apoio/zouk for fa.png" alt="">
 <img src="imagens/apoio/LOGO EMBRAZOUK - FUNDO TRANSPARENTE.png" alt="">
-
+<img src="imagens/apoio/apoio canto do sol.png" alt="">
 
 </body>
 <footer>
