--- a/pag002.html
+++ b/pag002.html
@@ -44,7 +44,7 @@
         }
         nav > a{                    /*link do menu*/
             color: white;
-            background-color: rgb(216, 31, 154);
+           
             padding: 10px; /*dist. dos links*/
             border-radius: 5px; /*arred. da borda*/
             text-decoration: none; /*tirar sublinhado*/ 
@@ -84,12 +84,12 @@
     <br>
     <br>
 
-<h2>Full Pass - Earlybirdy R$ 530,00</h2>
+<h2>Full Pass - Earlybird R$ 530,00</h2>
 <h3>02 Dias de workshop + 4 Bailes -</h3>
 <h2>***Não incluso o Boat Party***</h2>
 <br>
 <br>
-<h2>Full Pass + Boat Party - Earlybirdy R$ 690,00</h2>
+<h2>Full Pass + Boat Party - Earlybird R$ 690,00</h2>
 <br>
 <br>
 <h3>Disponível até 14 de Março de 2024</h3>
@@ -115,6 +115,7 @@
 <img src="imagens/apoio/secretaria do turismo.jpg" alt="">
 <img src="imagens/apoio/zouk for fa.png" alt="">
 <img src="imagens/apoio/LOGO EMBRAZOUK - FUNDO TRANSPARENTE.png" alt="">
+<img src="imagens/apoio/apoio canto do sol.png" alt="">
 </div>
 
 </body>
