--- a/pag005.html
+++ b/pag005.html
@@ -24,9 +24,10 @@
         .pousadas{
             text-align: center;
             display: inline-block;
-            padding: 30px;
+            padding: 40px;
             background-color: white;
-            margin-left: 10px;
+            margin-inline: 10px;
+            
         }
         div{
             text-align: center;
