--- a/pag002.html
+++ b/pag002.html
@@ -18,7 +18,7 @@
             font-family: Arial, Helvetica, sans-serif;
             background-color: rgb(243, 226, 151);
             margin: auto;
-            background-image: url(imagens/professores/imagem\ fundo\ pacotes.png);
+            background-image: url(imagens/fundo_pacotes-transformed.png);
             background-repeat: no-repeat ;
             background-size: cover;
         }
