--- a/index.html
+++ b/index.html
@@ -35,18 +35,41 @@
 <br>
 
 <h4>Patrocinador Oficial</h4>
+<a href="https://www.instagram.com/cantodosolpraia/">
 <img src="imagens/CANTO DO SOL PRAIA 1_page-0001.jpg" alt="Canto do Sol Praia Logo">
+</a>
 <br>
-<h4>Apoio</h4> 
-<img src="imagens/apoio/organização internaciaonal de lambada.jpg" alt="">
-<img src="imagens/apoio/Logo indyo normal fundo.jpg" alt="">
-<img src="imagens/apoio/zouk army.png" alt="">
-<img src="imagens/apoio/chinelo e areia_page-0001.jpg" alt=""> 
-<img src="imagens/apoio/logo camamu adventure_page-0001.jpg" alt="">
-<img src="imagens/apoio/secretaria do turismo.jpg" alt="">
-<img src="imagens/apoio/zouk for fa.png" alt="">
-<img src="imagens/apoio/LOGO EMBRAZOUK - FUNDO TRANSPARENTE.png" alt="">
-<img src="imagens/apoio/apoio canto do sol.png" alt="">
+<h4>Apoio</h4>
+<a href="https://www.instagram.com/orglambada/"> 
+    <img src="imagens/apoio/organização internaciaonal de lambada.jpg" alt="">
+</a>
+<a href="https://www.instagram.com/indyo.films/">
+    <img src="imagens/apoio/Logo indyo normal fundo.jpg" alt="">
+</a>
+<a href="https://www.instagram.com/zoukarmy/">
+    <img src="imagens/apoio/zouk army.png" alt="">
+</a>
+<a href="https://www.instagram.com/chineloeareia/">
+    <img src="imagens/apoio/chinelo e areia_page-0001.jpg" alt=""> 
+</a>
+<a href="https://www.instagram.com/camamu_adventure/">
+    <img src="imagens/apoio/logo camamu adventure_page-0001.jpg" alt="">
+</a>
+<a href="https://www.instagram.com/sectur_marau/">
+    <img src="imagens/apoio/secretaria do turismo.jpg" alt="">
+</a>
+<a href="https://www.instagram.com/zoukforfa/">    
+    <img src="imagens/apoio/zouk for fa.png" alt="">
+</a>
+<a href="https://www.instagram.com/embrazouk/">
+    <img src="imagens/apoio/LOGO EMBRAZOUK - FUNDO TRANSPARENTE.png" alt="">
+</a>
+<a href="https://www.instagram.com/cantodosolpousada/">
+    <img src="imagens/apoio/apoio canto do sol.png" alt="">
+</a>
+<a href="https://www.instagram.com/aguazulbarragrande/">
+    <img src="imagens/apoio/Agua azul.jpeg" alt="">
+</a>
 
 </body>
 <footer>
