--- a/pag002.html
+++ b/pag002.html
@@ -62,6 +62,8 @@
             width: 220px;
             height: 60px;
         }
+          
+        
     </style>
 </head>
 <body>
@@ -94,7 +96,7 @@
 <br>
 <h3>Disponível até 14 de Março de 2024</h3>
 <br>
-<a href="link do site" target="_blank">
+<a href="https://www.danceplace.com/li/nx/iMCIBlcVHR07cysp" target="_blank">
     <input type="button" value="COMPRE AGORA/ BY NOW">
 </a>
 <br>
