--- a/pag002.html
+++ b/pag002.html
@@ -95,11 +95,14 @@
 <br>
 <br>
 <h3>Disponível até 14 de Março de 2024</h3>
-<br>
+<br><!--
 <a href="https://www.danceplace.com/li/nx/iMCIBlcVHR07cysp" target="_blank">
     <input type="button" value="COMPRE AGORA/ BY NOW">
 </a>
-<br>
+-->
+<br><a href="https://www.danceplace.com/li/nx/iMCIBlcVHR07cysp" target="_blank">
+    <img src="imagens/teste/botao-comprar.jpg" alt="">
+</a>
 <br>
 <br>
 <br>
