--- a/inicial_espanhol.html
+++ b/inicial_espanhol.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,21 +17,21 @@
     <a href="inicial_ingles.html">
         <img src="imagens/teste/bandeira USA.png" alt="">
     </a>
-    <a href="inicial_espanhol.html">
-        <img src="imagens/teste/bandeira espanha.png" alt="">
+    <a href="index.html">
+        <img src="imagens/teste/bandeira BRASIL.png" alt="">
     </a>
 </div>
 
 <nav>
-<a href="pag003.html">ARTISTAS</a>    
-<a href="pag004.html">PROGRAMAÇÃO</a>
-<a href="pag002.html">PACOTES</a>
-<a href="pag005.html">HOSPEDAGEM</a>
-<a href="pag006.html">COMO CHEGAR</a>
+<a href="professores_espanhol.html">ARTISTAS</a>    
+<a href="programacao_espanhol.html">PROGRAMACIÓN</a>
+<a href="pacotes_espanhol.html">PAQUETES</a>
+<a href="hospedagem_espanhol.html">HOSPEDAJE</a>
+<a href="como_chegar_espanho.html">CÓMO LLEGAR</a>
 </nav>    
-<h1>O início de uma nova era...30/01/2025 á 02/02/2025</h1>
-<h2>Muito sol, muita Lambada e Zouk Brasileiro em um Paraiso Tropical !!!!
-    Venha para o MARAÚ DANCE FESTIVAL  </h3>
+<h1>El comienzo de una nueva era...30/01/2025 al 02/02/2025</h1>
+<h2>¡¡¡Mucho sol, mucha Lambada y Zouk brasileño en un paraíso tropical!!!!
+    Ven al MARAÚ DANCE FESTIVAL  </h3>
 <br>
 <br>
 <video controls>
@@ -43,12 +43,12 @@
 <br>
 <br>
 
-<h4>Patrocinador Oficial</h4>
+<h4>Esponsor oficial</h4>
 <a href="https://www.instagram.com/cantodosolpraia/">
 <img src="imagens/CANTO DO SOL PRAIA 1_page-0001.jpg" alt="Canto do Sol Praia Logo">
 </a>
 <br>
-<h4>Apoio</h4>
+<h4>Apoyo</h4>
 <a href="https://www.instagram.com/orglambada/"> 
     <img src="imagens/apoio/organização internaciaonal de lambada.jpg" alt="">
 </a>
