--- a/inicial_ingles.html
+++ b/inicial_ingles.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site Marau Dance Festival</title>
+    <title>Site Marau Dance Festival INGLES</title>
 
     <link rel="stylesheet" href="style.css">
 
@@ -14,8 +14,8 @@
 <img src="imagens/maraú02.png" alt="logo">
 </div>
 <div class="linguagem">
-    <a href="inicial_ingles.html">
-        <img src="imagens/teste/bandeira USA.png" alt="">
+    <a href="index.html">
+        <img src="imagens/teste/bandeira BRASIL.png" alt="">
     </a>
     <a href="inicial_espanhol.html">
         <img src="imagens/teste/bandeira espanha.png" alt="">
@@ -23,15 +23,14 @@
 </div>
 
 <nav>
-<a href="pag003.html">ARTISTAS</a>    
-<a href="pag004.html">PROGRAMAÇÃO</a>
-<a href="pag002.html">PACOTES</a>
-<a href="pag005.html">HOSPEDAGEM</a>
-<a href="pag006.html">COMO CHEGAR</a>
+<a href="professores_ingles.html">ARTISTS</a>    
+<a href="programacao_ingles.html">SCHEDULE</a>
+<a href="pacotes_ingles.html">TICKETS</a>
+<a href="hospedagem_ingles.html">ACCOMMODATION</a>
+<a href="como_chegar_ingles.html">HOW TO ACCESS</a>
 </nav>    
-<h1>O início de uma nova era...30/01/2025 á 02/02/2025</h1>
-<h2>Muito sol, muita Lambada e Zouk Brasileiro em um Paraiso Tropical !!!!
-    Venha para o MARAÚ DANCE FESTIVAL  </h3>
+<h1>The beginning of a new era...01/30/2025 to 02/02/2025</h1>
+<h2>The perfect heat to dance a lot of Lambada and Brazilian Zouk in a Tropical Paradise!!!! Come to MARAÚ DANCE FESTIVAL  </h3>
 <br>
 <br>
 <video controls>
@@ -43,12 +42,12 @@
 <br>
 <br>
 
-<h4>Patrocinador Oficial</h4>
+<h4>Official Sponsor</h4>
 <a href="https://www.instagram.com/cantodosolpraia/">
 <img src="imagens/CANTO DO SOL PRAIA 1_page-0001.jpg" alt="Canto do Sol Praia Logo">
 </a>
 <br>
-<h4>Apoio</h4>
+<h4>Support</h4>
 <a href="https://www.instagram.com/orglambada/"> 
     <img src="imagens/apoio/organização internaciaonal de lambada.jpg" alt="">
 </a>
@@ -82,6 +81,6 @@
 
 </body>
 <footer>
-    criado por Newton Pohsner
+    created by Newton Pohsner
 </footer>
 </html>
