--- a/pacotes_espanhol.html
+++ b/pacotes_espanhol.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -71,15 +71,15 @@
         <img src="imagens/maraú02.png" alt="logo">
         </div>
         <nav>
-            <a href="index.html">PAGINA INICIAL</a>
-            <a href="pag003.html">ARTISTAS</a>    
-            <a href="pag004.html">PROGRAMAÇÃO</a>
-            <a href="pag005.html">HOSPEDAGEM</a>
-            <a href="pag006.html">COMO CHEGAR</a>
+            <a href="inicial_espanhol.html">INICIO</a>
+            <a href="professores_espanhol.html">ARTISTAS</a>    
+            <a href="programacao_espanhol.html">PROGRAMACIÓN</a>
+            <a href="hospedagem_espanhol.html">HOSPEDAJE</a>
+            <a href="como_chegar_espanho.html">CÓMO LLEGAR</a>
             </nav>
     <br>
     <br>
-    <h1>PACOTES MARAU DANCE FESTIVAL 2025</h1>
+    <h1>PAQUETES MARAÚ DANCE FESTIVAL 2025</h1>
     <br>
     <br>
     <br>
@@ -87,14 +87,14 @@
     <br>
 
 <h2>Full Pass - Earlybird R$ 530,00</h2>
-<h3>02 Dias de workshop + 4 Bailes -</h3>
-<h2>***Não incluso o Boat Party***</h2>
+<h3>02 Días de workshop + 4 Bailes -</h3>
+<h2>***Fiesta en barco no incluida***</h2>
 <br>
 <br>
-<h2>Full Pass + Boat Party - Earlybird R$ 690,00</h2>
+<h2>Full Pass + Fiesta en Barco - Earlybird R$ 690,00</h2>
 <br>
 <br>
-<h3>Disponível até 14 de Março de 2024</h3>
+<h3>Disponible hasta el 14 de marzo de 2024</h3>
 <br>
 <a href="https://www.danceplace.com/li/nx/iMCIBlcVHR07cysp" target="_blank">
     <img src="imagens/teste/botao-comprar.jpg" alt="">
@@ -105,12 +105,12 @@
 <br>
 <br>
 <div class="apoio">
-    <h4>Patrocinador Oficial</h4>
+    <h4>Esponsor oficial</h4>
     <a href="https://www.instagram.com/cantodosolpraia/">
     <img src="imagens/CANTO DO SOL PRAIA 1_page-0001.jpg" alt="Canto do Sol Praia Logo">
     </a>
     <br>
-    <h4>Apoio</h4>
+    <h4>Apoyo</h4>
     <a href="https://www.instagram.com/orglambada/"> 
         <img src="imagens/apoio/organização internaciaonal de lambada.jpg" alt="">
     </a>
