--- a/pacotes_ingles.html
+++ b/pacotes_ingles.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -71,15 +71,15 @@
         <img src="imagens/maraú02.png" alt="logo">
         </div>
         <nav>
-            <a href="index.html">PAGINA INICIAL</a>
-            <a href="pag003.html">ARTISTAS</a>    
-            <a href="pag004.html">PROGRAMAÇÃO</a>
-            <a href="pag005.html">HOSPEDAGEM</a>
-            <a href="pag006.html">COMO CHEGAR</a>
+            <a href="index.html">HOME PAGE</a>
+            <a href="professores_ingles.html">ARTISTS</a>    
+            <a href="programacao_ingles.html">SCHEDULE</a>
+            <a href="hospedagem_ingles.html">ACCOMMODATION</a>
+            <a href="como_chegar_ingles.html">HOW TO ACCESS</a>
             </nav>
     <br>
     <br>
-    <h1>PACOTES MARAU DANCE FESTIVAL 2025</h1>
+    <h1>MARAU DANCE FESTIVAL 2025 TICKETS</h1>
     <br>
     <br>
     <br>
@@ -87,17 +87,17 @@
     <br>
 
 <h2>Full Pass - Earlybird R$ 530,00</h2>
-<h3>02 Dias de workshop + 4 Bailes -</h3>
-<h2>***Não incluso o Boat Party***</h2>
+<h3>02 days of workshop + 4 dances</h3>
+<h2>***Boat Party not included***</h2>
 <br>
 <br>
 <h2>Full Pass + Boat Party - Earlybird R$ 690,00</h2>
 <br>
 <br>
-<h3>Disponível até 14 de Março de 2024</h3>
+<br>
 <br>
 <a href="https://www.danceplace.com/li/nx/iMCIBlcVHR07cysp" target="_blank">
-    <img src="imagens/teste/botao-comprar.jpg" alt="">
+    <img src="imagens/teste/buy now.png" alt="">
 </a>
 <br>
 <br>
@@ -105,12 +105,12 @@
 <br>
 <br>
 <div class="apoio">
-    <h4>Patrocinador Oficial</h4>
+    <h4>Official Sponsor</h4>
     <a href="https://www.instagram.com/cantodosolpraia/">
     <img src="imagens/CANTO DO SOL PRAIA 1_page-0001.jpg" alt="Canto do Sol Praia Logo">
     </a>
     <br>
-    <h4>Apoio</h4>
+    <h4>Support</h4>
     <a href="https://www.instagram.com/orglambada/"> 
         <img src="imagens/apoio/organização internaciaonal de lambada.jpg" alt="">
     </a>
