--- a/professores_espanhol.html
+++ b/professores_espanhol.html
@@ -78,16 +78,16 @@
 
     
     <nav>
-        <a href="index.html">PAGINA INICIAL</a>    
-        <a href="pag004.html">PROGRAMAÇÃO</a>
-        <a href="pag002.html">PACOTES</a>
-        <a href="pag005.html">HOSPEDAGEM</a>
-        <a href="pag006.html">COMO CHEGAR</a>
+        <a href="inicial_espanhol.html">INICIO</a>    
+        <a href="programacao_espanhol.html">PROGRAMACIÓN</a>
+        <a href="pacotes_espanhol.html">PAQUETES</a>
+        <a href="hospedagem_espanhol.html">HOSPEDAJE</a>
+        <a href="como_chegar_espanho.html">CÓMO LLEGAR</a>
     </nav>
     <br>
     <br>
     <br>
-    <h1>ARTISTAS</h1>
+    <h1>PROFESORES</h1>
     <br>
     <br>
     <div>
@@ -153,14 +153,14 @@
     <div>
             <img src="imagens/professores/interrogação.png" alt="">
         </a>
-        <h3>Quem será???</h3>
+        <h3>¿¿¿Quién será???</h3>
         <p>???????/?? - ?????</p>
     </div>
     <br>
     <div>
         <img src="imagens/professores/interrogação.png" alt="">
     </a>
-    <h3>Quem será???</h3>
+    <h3>¿¿¿Quién será???</h3>
     <p>???????/?? - ?????</p>
     </div>
     <br>
@@ -206,12 +206,12 @@
     <br>
     <br>
     
-    <h4>Patrocinador Oficial</h4>
+    <h4>Esponsor oficial</h4>
 <a href="https://www.instagram.com/cantodosolpraia/">
 <img src="imagens/CANTO DO SOL PRAIA 1_page-0001.jpg" alt="Canto do Sol Praia Logo">
 </a>
 <br>
-<h4>Apoio</h4>
+<h4>Apoyo</h4>
 <a href="https://www.instagram.com/orglambada/"> 
     <img src="imagens/apoio/organização internaciaonal de lambada.jpg" alt="">
 </a>
