--- a/programacao_ingles.html
+++ b/programacao_ingles.html
@@ -73,7 +73,7 @@
         </div>
         <nav>
             <a href="index.html">PAGINA INICIAL</a>
-            <a href="pag003.html">ARTISTAS</a>    
+            <a href="pag003.html">PROFESSORES</a>    
             <a href="pag002.html">PACOTES</a>
             <a href="pag005.html">HOSPEDAGEM</a>
             <a href="pag006.html">COMO CHEGAR</a>
@@ -159,10 +159,10 @@
 </head>
 <body>
     
-    <a href="index.html">VOLTAR PAGINA INICIAL</a>
+    <a href="index.html">BACK HOME PAGE</a>
     <br>
     <br>
-    <img src="imagens/Página-em-construção.png" alt="">
+    <img src="imagens/teste/pagina em contrução em ingles.png" alt="">
 
 </body>
 >
