--- a/inicial_ingles.html
+++ b/inicial_ingles.html
@@ -38,7 +38,12 @@
 </video>
 <br>
 <br>
-
+<a href="http://www.youtube.com/@maraudancefestival">
+    <img src="imagens/teste/youtube.jpg" alt="">
+</a>
+<a href="https://linktr.ee/maraudance">
+    <img src="imagens/teste/instagram.jpeg" alt="">
+</a>
 <br>
 <br>
 
