--- a/professores_espanhol.html
+++ b/professores_espanhol.html
@@ -169,21 +169,21 @@
     <br>
     <br>
     <div>
-        <a href="#">
+        <a href="https://www.instagram.com/djeduzouk/">
             <img src="imagens/professores/DJ Edu2.jpg" alt="">
         </a>
         <h3>DJ Edu</h3>
         <p>São Paulo/SP - Brasil</p>
     </div>
     <div>
-        <a href="#">
+        <a href="https://www.instagram.com/valclemente/">
             <img src="imagens/professores/DJ Val.jpg" alt="">
         </a>
         <h3>DJ Val</h3>
         <p>Rio de Janeiro/RJ - Brasil</p>
     </div>
     <div>
-        <a href="#">
+        <a href="https://www.instagram.com/djraffro/">
             <img src="imagens/professores/DJ Raffro.jpg" alt="">
         </a>
         <h3>DJ Raffro</h3>
