--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <a href="http://www.youtube.com/@maraudancefestival">
     <img src="imagens/teste/youtube.jpg" alt="">
 </a>
-<a href="https://linktr.ee/maraudance">
+<a href="https://www.instagram.com/maraudancefestival/">
     <img src="imagens/teste/instagram.jpeg" alt="">
 </a>
 <br>
