--- a/hospedagem_espanhol.html
+++ b/hospedagem_espanhol.html
@@ -174,7 +174,7 @@
     <br>
     <br>
     <br>
-    Teléfono: 55 (73) 3258-6258
+    Teléfono: +55 (73) 99872-6764
     <br>
     <br>
     Haz tu reserva:
@@ -238,7 +238,7 @@
         <br>
         <br>
         <br>
-        Teléfono: 55 (73) 3258-6258
+        Teléfono: +55 (73) 99872-6764
         <br>
         <br>
         Haga su reserva:
@@ -300,7 +300,7 @@
         <br>
         <br>
         <br>
-        Teléfono: 55 (73) 3258-6019
+        Teléfono: +55 (73) 99999-5044
         <br>
         <br>
         Haga su reserva:
