--- a/pag005.html
+++ b/pag005.html
@@ -174,7 +174,7 @@
     <br>
     <br>
     <br>
-    Telefone: (73) 3258-6258
+    Telefone: +55 (73) 99872-6764
     <br>
     <br>
     Faça sua reserva:
@@ -237,7 +237,7 @@
         <br>
         <br>
         <br>
-        Telefone: (73) 3258-6258
+        Telefone: +55 (73) 99872-6764
         <br>
         <br>
         Faça sua reserva:
@@ -298,7 +298,7 @@
         <br>
         <br>
         <br>
-        Telefone: (73) 3258-6019
+        Telefone: +55 (73) 99999-5044
         <br>
         <br>
         Faça sua reserva:
