--- a/pag002.html
+++ b/pag002.html
@@ -32,15 +32,32 @@
         h3{
             color: yellow;
         }
+        h4{
+            color: rgb(245, 86, 46);
+        }
+        h5{
+            color: yellow;
+        }
         div {
            text-align: center; 
            background-color: rgb(243, 226, 151);
            background-image: linear-gradient(to top, rgb(238, 203, 49),rgb(245, 86, 46));
         }
-        
+        .pix{
+            display: inline;
+        }
         .logo > img{
             width: 100%;
             background-size: cover;
+        }
+        .pix > div{
+            display: inline-block;
+            background: white;
+            padding: 10px;
+            
+        }
+        .pix > div > h4{
+            color: black;
         }
         nav > a{                    /*link do menu*/
             color: white;
@@ -96,12 +113,41 @@
 <br>
 <h3>Disponível até 14 de Março de 2024</h3>
 <br>
+<br>
+<br>
+<h4>Pagamentos com Cartão de Crédito</h4>
 <a href="https://www.danceplace.com/li/nx/iMCIBlcVHR07cysp" target="_blank">
     <img src="imagens/teste/botao-comprar.jpg" alt="">
 </a>
 <br>
 <br>
-<br>
+<h4>Pagamentos Pix/ Transferência Bancária</h4>
+<div class="pix">
+    <div>
+        <h6>CHAVE PIX: 31.280.366/0001-95
+        <br>
+        FAVORECIDO: Villa 935 Eventos Ltda ME.
+        <br>
+        <br>
+        <br>
+        </h6>
+    </div>
+
+    <div>
+        <h6>BANCO: Santander
+        <br>
+        AGENCIA: 4565
+        <br>
+        CONTA Nº: 130028253
+        <br>
+        FAVORECIDO: Villa 935 Eventos Ltda ME.
+        </h6>
+    </div>
+    <h3>ENVIAR COMPROVANTE PARA E-MAIL: 
+        <br> 
+        maraudancefestival@gmail.com  
+    </h3>
+</div>
 <br>
 <br>
 <div class="apoio">
