--- a/inicial_ingles.html
+++ b/inicial_ingles.html
@@ -36,8 +36,10 @@
 <video controls>
     <source src="video/marau-h_R0DmUppH.mp4" type="video/mp4">
 </video>
+<h3>Address: Rua Vasco Neto, nº 09 - Barra Grande - Maraú - Bahia - Brasil - Cep.: 45520-000</h3>
 <br>
 <br>
+<h4>Social Media</h4>
 <a href="http://www.youtube.com/@maraudancefestival">
     <img src="imagens/teste/youtube.jpg" alt="">
 </a>
