--- a/pag002.html
+++ b/pag002.html
@@ -126,6 +126,7 @@
     <div>
         <h6>CHAVE PIX: 31.280.366/0001-95
         <br>
+        <br>
         FAVORECIDO: Villa 935 Eventos Ltda ME.
         <br>
         <br>
@@ -141,6 +142,8 @@
         CONTA Nº: 130028253
         <br>
         FAVORECIDO: Villa 935 Eventos Ltda ME.
+        <br>
+        CNPJ: 31.280.366/0001-95
         </h6>
     </div>
     <h3>ENVIAR COMPROVANTE PARA E-MAIL: 
